--- a/InvenTree/locale/zh/LC_MESSAGES/django.po
+++ b/InvenTree/locale/zh/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-09-14 01:00+0000\n"
-"PO-Revision-Date: 2021-09-14 09:14\n"
+"PO-Revision-Date: 2021-09-18 01:53\n"
 "Last-Translator: \n"
 "Language-Team: Chinese Simplified\n"
 "Language: zh_CN\n"
@@ -4660,7 +4660,7 @@ msgstr "导入商品"
 
 #: part/templates/part/copy_part.html:9 templates/js/translated/part.js:352
 msgid "Duplicate Part"
-msgstr "重复商品"
+msgstr "复制部件"
 
 #: part/templates/part/copy_part.html:10
 #, python-format
