--- a/InvenTree/locale/zh/LC_MESSAGES/django.po
+++ b/InvenTree/locale/zh/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-09-14 01:00+0000\n"
-"PO-Revision-Date: 2021-09-18 01:53\n"
+"PO-Revision-Date: 2021-09-18 08:51\n"
 "Last-Translator: \n"
 "Language-Team: Chinese Simplified\n"
 "Language: zh_CN\n"
@@ -4175,7 +4175,7 @@ msgstr ""
 
 #: part/models.py:792
 msgid "Minimum Stock"
-msgstr ""
+msgstr "最低库存"
 
 #: part/models.py:793
 msgid "Minimum allowed stock level"
