--- a/InvenTree/locale/zh/LC_MESSAGES/django.po
+++ b/InvenTree/locale/zh/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-09-14 01:00+0000\n"
-"PO-Revision-Date: 2021-09-18 08:51\n"
+"PO-Revision-Date: 2021-09-18 10:59\n"
 "Last-Translator: \n"
 "Language-Team: Chinese Simplified\n"
 "Language: zh_CN\n"
@@ -4355,7 +4355,7 @@ msgstr ""
 #: part/models.py:2358 templates/js/translated/bom.js:256
 #: templates/js/translated/bom.js:314
 msgid "Optional"
-msgstr ""
+msgstr "可选项"
 
 #: part/models.py:2358
 msgid "This BOM item is optional"
@@ -4389,7 +4389,7 @@ msgstr ""
 #: templates/js/translated/bom.js:338
 #: templates/js/translated/table_filters.js:68
 msgid "Inherited"
-msgstr ""
+msgstr "继承项"
 
 #: part/models.py:2375
 msgid "This BOM item is inherited by BOMs for variant parts"
